--- a/assets/index.html
+++ b/assets/index.html
@@ -3,13 +3,14 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
-		<title>ZKApp</title>
+		<title>Kamus Kilat Inggris Indonesia</title>
 		<link rel="stylesheet" type="text/css" href="style.css">
 		<link rel="stylesheet" type="text/css" href="css/font-awesome.css">
 		<link rel="stylesheet" type="text/css" href="jssocials.css">
         <link rel="stylesheet" type="text/css" href="jssocials-theme-minima.css">
 		<script src="jquery.js"></script>
 		<script src="jssocials.js"></script>
+		<script src="zkwebapp.js"></script>
 		<script src="db.js"></script>
 		<script src="app.js"></script>
 	</head>
@@ -26,21 +27,13 @@
 			<div class="ditem" onclick="toggleDrawer(); listWords('en', 'a');"><i class="fa fa-star" style="width: 30px;"></i>English to Indonesia</div>
 			<div class="ditem" onclick="toggleDrawer(); listWords('id', 'a');"><i class="fa fa-star" style="width: 30px;"></i>Indonesia to English</div>
 			<div class="ditem" onclick="toggleDrawer(); showInfo();"><i class="fa fa-info" style="width: 30px;"></i>Info</div>
-			<!--SHAREBUTTONS-->
+			
+			<!--
     		<div style="text-align: center; margin-top: 50px; margin-bottom: 50px; font-size: 14px; padding: 15px; font-size: 14px;">
-				<p class="lil"><a href="http://zofiakreasi.com/"><img src="zk.png" width="45px"></a><br><br>Developed by<br>Habibie (Zofia Kreasi)</p>
-				<div id="share"></div>
+				<p class="lil">Dikembangkan oleh<br>ciihuy.com</p>
 			</div>
-    		<script>
-    			$("#share").jsSocials({
-    				url: shareLink(),
-    				text: shareText(),
-    				showLabel: false,
-    				showCount: false,
-    				shares: ["email", "twitter", "facebook", "googleplus", "linkedin", "pinterest", "stumbleupon", "pocket", "whatsapp", "viber", "messenger", "vkontakte", "telegram", "line"]
-    			});
-    		</script>
-    		<!--END OF SHAREBUTTONS-->
+    		-->
+			
 			<div id="credits"></div>
 		</div>
 	</body>
